Fix “left” is not a “align-items” value

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -85,7 +85,6 @@
 .user {
     margin: 15px 0 0 0;
     display: flex;
-    align-items: left;
 }
 
 .description {
